我的收藏分页处理, 主题详情UI微调

--- a/V2EX/Supporting Files/style.css
+++ b/V2EX/Supporting Files/style.css
@@ -99,7 +99,7 @@ ol {
 
 .subtle {
     background-color: #ffffff;
-    padding: 5px 10px 0px 10px;
+    padding: 5px 5px 0px 5px;
     font-size: 12px;
     line-height: 120%;
     text-align: left;
@@ -118,6 +118,8 @@ ol {
 }
 
 body {
+    padding: 0px 15px 0px 15px;
+    margin: 0px;
     background-color: #ffffff;
 }
 
