--- a/V2EX/Supporting Files/day.css
+++ b/V2EX/Supporting Files/day.css
@@ -8,7 +8,7 @@ hr {
 }
 
 pre {
-    background-color: #FFFFFF;
+    background-color: #f8f8f8;
 }
 
 a:link, a:visited, a:active {
@@ -20,9 +20,9 @@ a:link, a:visited, a:active {
 }
 
 .topic_content {
-    color: #646464;
+    color: #000;
 }
 
 body {
-    background-color: #FFFFFF;
+    background-color: #FFF;
 }
