1. 修复邮箱登录时无法获取数据的问题 2. 修复使用邮箱登录时显示 用户名 不正确 3. 修复保存图片时会奔溃问题 （iOS 11） 4. 中英文同意使用 无衬线体 5. 对分享做了优化，可以保存完整的内容到 印象笔记 6. 搜索结果支持加载更多

--- a/V2EX/Supporting Files/style.css
+++ b/V2EX/Supporting Files/style.css
@@ -32,8 +32,6 @@ hr {
 }
 
 pre {
-    font-family: 'Consolas', 'Panic Sans', 'Consolas', 'DejaVu Sans Mono',
-    'Bitstream Vera Sans Mono', 'Menlo', 'Microsoft Yahei', monospace;
     font-size: {preFontSize};
     letter-spacing: 0.015em;
     line-height: 120%;
@@ -47,11 +45,6 @@ pre {
 pre a {
     color: inherit;
     text-decoration: underline;
-}
-
-code {
-    font-family: 'Consolas', 'Panic Sans', 'DejaVu Sans Mono',
-    'Bitstream Vera Sans Mono', 'Menlo', 'Microsoft Yahei', monospace;
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -118,9 +111,10 @@ ol {
 }
 
 body {
+    font-family: 'PingFangSC-Regular', monospace;
     padding: 0px 15px 0px 15px;
     margin: 0px 0px 5px;
-    background-color: #ffffff;
+    background-color: #fff;
 }
 
 img {
